src/main/java/com/example/DiplomaSite/error/StudentNotFoundException.java
package com.example.DiplomaSite.error;


public class StudentNotFoundException extends RuntimeException {
    public StudentNotFoundException(String message) {
        super(message);
    }
}